package net.sytes.zeinhaddad.singadu.repository;

import org.springframework.data.jpa.repository.JpaRepository;

import net.sytes.zeinhaddad.singadu.entity.ProblemType;

public interface ProblemTypeRepository extends JpaRepository<ProblemType, Long> {

}
